--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,10 +18,23 @@
   position: relative;
 }
 
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   position: absolute;
   left: 15px;
   bottom: 15px;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .nav__notification_1 {
@@ -33,8 +46,8 @@
   justify-content: center;
   align-items: center;
   position: absolute;
+  box-sizing: border-box;
   left: 30px;
-  bottom: 30px;
 }
 
 .nav__notification_2 {
@@ -45,4 +58,29 @@
   position: absolute;
   bottom: 25px;
   left: 95px;
+}
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.8s;
 }
